# create-ragbits-app

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: README.md  ci.yaml  publish-pypi.yml
src/create_ragbits_app/: main.py  template_config_base.py  template_helper.py  template_utils.py  ui.py  ui_generator.py
src/create_ragbits_app/static/ui/: ui_instructions.md.j2
src/create_ragbits_app/static/ui/vanilla-ts/: README.md.j2
src/create_ragbits_app/static/ui/vanilla-ts/src/: main.ts.j2
src/create_ragbits_app/templates/rag/: README.md.j2  ingest.py.j2  pyproject.toml.j2  template_config.py
src/create_ragbits_app/templates/rag/docker/: docker-compose.yml.j2
src/create_ragbits_app/templates/rag/observability/: otel-collector.yml.j2  prometheus.yml.j2  tempo.yml.j2
src/create_ragbits_app/templates/rag/src/{{pkg_name}}/: app.py.j2  components.py.j2  ingest.py.j2  main.py.j2  observability.py.j2  prompt_qa.py
src/create_ragbits_app/templates/reaserch_agent/: README.md.j2  template_config.py
src/create_ragbits_app/templates/reaserch_agent/src/{{pkg_name}}/: main.py.j2  prompts.py
src/create_ragbits_app/templates/shared/: template_config.py
src/create_ragbits_app/templates/simple_agent/: template_config.py
src/create_ragbits_app/templates/simple_agent/src/{{pkg_name}}/: tools.py  (+2 more)
src/create_ragbits_app/templates/ui/react/: README.md.j2  index.html.j2  tsconfig.node.json.j2
src/create_ragbits_app/templates/ui/react-ts/: package.json.j2
src/create_ragbits_app/templates/ui/vanilla/: README.md.j2
src/create_ragbits_app/templates/ui/vanilla-ts/: index.html.j2  package.json.j2  tsconfig.json.j2
templates/rag/: main.py.j2  requirements.txt.j2  template_config.py
(+5 files in other folders)
